--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
+   "scripts": {
+   "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:js": "eslint src/**/*.{js,jsx}"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
